# AFLplusplus

./: .clang-format  .custom-format.py  .dockerignore  .gitignore  .gitmodules  .travis.yml  Android.bp  CITATION.cff  CONTRIBUTING.md  ChangeLog.md  Changelog  Changelog.md  Dockerfile  GNUmakefile  GNUmakefile.gcc_plugin  GNUmakefile.llvm  Get-Set-Fuzz.md  Makefile  PATCHES  QuickStartGuide.md  README.RL.md  README.md  README.skip.md  README_new.md  RL-requirements.txt  TODO  TODO.md  TODO_LLVM  action.yml  afl-addseeds  afl-analyze.c  afl-as.8  afl-as.c  afl-as.h  afl-cc.sh.in  afl-cmin  afl-cmin.awk  afl-cmin.bash  afl-cmin.bash.8  afl-common.c  (+28 more)
.github/: FUNDING.yml
benchmark/: COMPARISON  COMPARISON.md  README.md  benchmark-results.jsonl  benchmark.ipynb  benchmark.py  benchmark.sh
coresight_mode/: .gitignore  GNUmakefile  Makefile  README.md
custom_mutators/: Android.bp  README.md  simple_mutator.c
custom_mutators/libafl_base/: Cargo.toml  Makefile  README.md
custom_mutators/libafl_base/src/: lib.rs
custom_mutators/rust/custom_mutator/: Cargo.toml
custom_mutators/rust/custom_mutator/src/: fallible.rs  lib.rs
custom_mutators/rust/example/: Cargo.toml
custom_mutators/rust/example/src/: example_mutator.rs  lib.rs
custom_mutators/rust/example_lain/: Cargo.toml
custom_mutators/rust/example_lain/src/: lain_mutator.rs  lib.rs
dictionaries/: README.dictionaries  README.md  aff.dict  atom.dict  bash.dict  bdf.dict  bmp.dict  bz2.dict  creole.dict  css.dict  csv.dict  dds.dict  djvu.dict  exif.dict  fbs.dict  ftp.dict  gif.dict  graphviz.dict  heif.dict  html_tags.dict  http.dict  icc.dict  icns.dict  jpeg.dict  jpeg2000.dict  js.dict  json.dict  jsonnet.dict  markdown.dict  mathml.dict  mp4.dict  ogg.dict  openexr.dict  otf.dict  pbm.dict  pcap.dict  perl.dict  png.dict  proj4.dict  protobuf.dict  (+28 more)
docs/: ChangeLog  ChangeLog.md  Changelog.md  FAQ.md  INSTALL  INSTALL.md  PATCHES  PATCHES.md  QuickStartGuide.md  QuickStartGuide.txt  README  README.MOpt  README.MOpt.md  README.md  README.radamsa.md  afl-fuzz_approach.md  android.md  behaviour_changes.md  best_practices.md  beyond_crashes.md  binaryonly_fuzzing.md  binaryonly_fuzzing.txt  branches.md  building_installing.md  choosing_testcases.md  ci_fuzzing.md  cite.md  common_sense_risks.md  coverage_estimation.md  custom_mutator.md  custom_mutator.txt  custom_mutators.md  docs.md  docs2.md  env_variables.md  env_variables.txt  features.md  fuzzing.md  fuzzing_binary-only_targets.md  fuzzing_expert.md  (+37 more)
examples/: README.md
experimental/: README.experiments
frida_mode/: .gitignore  DEBUGGING.md  GNUmakefile  Makefile  MapDensity.md  README.md  Scripting.md  frida.map  frida_parallel.sh  frida_parallel_hook.sh  qemu_parallel.sh  qemu_parallel_hook.sh  results.sh  update_frida_version.sh
gcc_plugin/: CRASH  GNUmakefile  Makefile  README.gcc  README.gcc.md  README.instrument_file.md  README.md  README.whitelist.md  afl-gcc-fast.c  afl-gcc-pass.so.cc  afl-gcc-rt.o.c  install.sh
githooks/: pre-commit
include/: afl-as.h  afl-cc.h  afl-framework.h  afl-fuzz-rl.h  afl-fuzz.h  afl-mutations.h  afl-persistent-replay.h  afl-prealloc.h  afl-record-compat.h  alloc-inl.h  android-ashmem.h  cmplog.h  common.h  config.h  coverage-32.h  coverage-64.h  debug.h  envs.h  forkserver.h  hash.h  list.h  persistent_replay.h  rl-py.h  sharedmem.h  snapshot-inl.h  t1ha.h  t1ha0_ia32aes_b.h  t1ha_bits.h  t1ha_selfcheck.h  types.h  unusual.h  valueprofile.h  xxh3.h  xxhash.h
instrumentation/: LLVMInsTrim.so.cc  Makefile  MarkNodes.cc  README.cmplog.md  README.ctx.md  README.gcc_plugin.md  README.injections.md  README.instrim.md  README.instrument_list.md  README.laf-intel.md  README.llvm.md  README.lto.md  README.neverzero.md  README.ngram.md  README.out_of_line.md  README.persistent_mode.md  README.snapshot.md  RangeAnalysis.cpp  RangeAnalysis.h  SanitizerCoverageLTO.so.cc  SanitizerCoveragePCGUARD-alternative.so.cc  SanitizerCoveragePCGUARD.so.cc  afl-compiler-rt.o.c  afl-gcc-cmplog-pass.so.cc  afl-gcc-cmptrs-pass.so.cc  afl-gcc-common.h  afl-gcc-pass.so.cc  afl-llvm-callgraph.cc  afl-llvm-common.cc  afl-llvm-common.h  afl-llvm-dict2file.so.cc  afl-llvm-lto-instrumentation.so.cc  afl-llvm-lto-instrumentlist.so.cc  afl-llvm-pass.so.cc  afl-llvm-rt-lto.o.c  afl-llvm-rt.o.c  afl-llvm-unreachable.cc  afl-unusual-pass.so.cc  afl-unusual-rt.o.c  cmplog-instructions-pass.cc  (+9 more)
libdislocator/: GNUmakefile  Makefile  README.dislocator  README.dislocator.md  README.md  (+1 more)
unicorn_mode/samples/speedtest/rust/: Cargo.toml  Makefile
unicorn_mode/samples/speedtest/rust/src/: main.rs
utils/optimin/: CMakeLists.txt  EVALMAXSAT_VERSION  README.md  build_optimin.sh
utils/optimin/src/: CMakeLists.txt  OptiMin.cpp  ProgressBar.h
(+1002 files in other folders)
