[package]
name = "custom_mutator"
version = "0.1.0"
authors = ["Julius Hohnerlein <julihoh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
afl_internals = ["custom_mutator-sys"]

[dependencies]
custom_mutator-sys = { path = "../custom_mutator-sys", optional=true }
