[package]
name = "example"
version = "0.1.0"
authors = ["Julius Hohnerlein <julihoh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_mutator = { path = "../custom_mutator" }

[lib]
crate-type = ["cdylib"]